# runar

./: .gitignore  CLAUDE.md  CODEGEN-PLAN.md  LICENSE  README.md  go.work  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
conformance/: README.md  formats.json  go.mod  go.sum  script_execution_test.go
docs/: api-reference.md  compiler-architecture.md  contract-patterns.md  getting-started.md  inductive-contracts.md  integration-guide.md  language-reference.md  post-quantum-analysis.md  runar-whitepaper.tex  testing-guide.md  tsop-whitepaper.tex  zig-parity-status.md
docs/formats/: go.md  (+4 more)
end2end-example/: tsconfig.json
examples/: tsconfig.json
integration/: .gitignore  README.md  auction_test.go  convergence_proof_test.go  counter_test.go  covenant_vault_test.go  escrow_test.go  function_patterns_test.go  go.mod  main_test.go  math_demo_test.go  oracle_price_test.go  p2pkh_test.go  regtest.sh  run-all.sh  schnorr_zkp_test.go  slhdsa_test.go  token_ft_test.go  token_nft_test.go  wots_test.go
integration/rust/: Cargo.toml
integration/rust/tests/: auction.rs  convergence_proof.rs  counter.rs  covenant_vault.rs  ec_isolation.rs  escrow.rs  function_patterns.rs  fungible_token.rs  integration.rs  math_demo.rs  nft.rs  oracle_price_feed.rs  p2pkh.rs  post_quantum_wallet.rs  schnorr_zkp.rs  sphincs_wallet.rs
integration/rust/tests/helpers/: crypto.rs  mod.rs
scripts/: bump-version.sh  publish-all.sh
spec/: README.md  abi.md  artifact-format.md  frontend-spec.md  grammar.md  ir-format.md  opcodes.md  semantics.md  type-system.md
(+415 files in other folders)
