[package]
name = "runar-integration-rust"
version = "0.1.0"
edition = "2021"
autotests = false

[dependencies]
runar-lang = { path = "../../packages/runar-rs" }
runar-compiler-rust = { path = "../../compilers/rust" }
serde_json = "1"
sha2 = "0.10"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
ripemd = "0.1"
k256 = { version = "0.13", features = ["ecdsa"] }

[[test]]
name = "integration"
path = "tests/integration.rs"
